syntax = "proto3";

package supercontractserver;

message OpenConnection {
  string url = 1;
}

message OpenConnectionReturn {
  bool success = 1;
  int64 identifier = 2;
}

message ReadConnectionStream {
  int64 identifier = 3;
}

message ReadConnectionStreamReturn {
  bool success = 1;
  bytes buffer = 2;
}

message CloseConnection {
  int64 identifier = 3;
}

message CloseConnectionReturn {
  bool success = 1;
}